# Capstone1_Personal_Banking

./: README.md  main.py  pyproject.toml
app/agents/: rag_agent.py
app/core/: db.py
app/ingestion/: ingestion.py
app/tools/: tools.py
routes/: query_routes.py  upload_routes.py
services/: query_services.py  upload_services.py
ui/: app copy 2.py  app copy.py  app.py  page.py  user.py
ui/component/: chat_box.py
ui/pages/: Upload_File.py  uploadFile.py
ui/services/: api_client.py
ui/static/: app.py  styles copy.css  styles.css  styles1.css
ui/utils/: chat_history.py  validators.py
