[project]
name = "capstoneproject-personalized-retail-banking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent>=0.1.3",
    "fastapi>=0.139.2",
    "python-multipart>=0.0.32",
    "streamlit>=1.59.2",
    "uvicorn>=0.51.0",
]
